Corrected the wrong title name for the skype icon. Found a layout bug where the navbar wasn't covering the entire page on the Q&A section because the last div with the contact icons had a z-index of 22. I changed it to 13.

--- a/css/main.css
+++ b/css/main.css
@@ -1160,6 +1160,7 @@ body h4{
   align-items: center;
   padding: 0px;
   position: absolute;
+  z-index: 13;
   right: 0;   
   left: 0;
   bottom:0; 
