--- a/css/questions-and-answers.css
+++ b/css/questions-and-answers.css
@@ -161,7 +161,7 @@ padding-bottom: 150px;
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 22;
+    z-index: 13;
     padding: 80px 0px 0px 0px;
     background-color: #333;
   }
